// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchInput icon only should match snapshot 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 44px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  border: none;
  border-radius: 2px;
  background-color: rgba(255,255,255,0.5);
}

.c0.hidden {
  visibility: hidden;
}

.c0.hidden > * {
  visibility: hidden;
}

.c1 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: rgba(255,255,255,1);
  padding: 0;
  border: none;
  background: transparent;
  outline: none;
}

.hidden .c1 {
  visibility: visible;
}

.c3 {
  font-size: 16px;
  height: 100%;
  color: rgba(255,255,255,1);
  padding: 0;
  border: none;
  background: none;
}

.c3::-webkit-input-placeholder {
  color: rgba(255,255,255,1);
}

.c3::-moz-placeholder {
  color: rgba(255,255,255,1);
}

.c3:-ms-input-placeholder {
  color: rgba(255,255,255,1);
}

.c3::placeholder {
  color: rgba(255,255,255,1);
}

.c3:focus {
  outline: none;
}

.c2 {
  margin: 0 16px;
}

.c5 {
  background: transparent;
  outline: none;
  border: 1px solid rgba(255,255,255,1);
  color: rgba(255,255,255,1);
  padding: 0;
  border-radius: 14px;
  width: 14px;
  height: 14px;
  line-height: 14px;
  font-size: 14px;
  text-align: center;
  text-transform: uppercase;
}

.c6 {
  border: none;
  background: transparent;
  outline: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: 8px;
  color: rgba(255,255,255,1);
  padding: 0 16px 0 0;
  height: 100%;
}

.c4 {
  height: 100%;
  width: 44px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: default;
  visibility: hidden;
}

@media screen and (min-width:768px) {
  .c5 {
    margin-left: 8px;
  }
}

@media screen and (min-width:768px) {
  .c6 {
    display: none;
  }
}

@media screen and (min-width:768px) {
  .c4 {
    width: 40px;
    -webkit-box-pack: left;
    -webkit-justify-content: left;
    -ms-flex-pack: left;
    justify-content: left;
  }
}

<div
  className="hidden c0"
  onBlur={[Function]}
  onFocus={[Function]}
>
  <button
    aria-label="Search button"
    className="c1"
    onClick={[Function]}
  >
    <svg
      className="c2"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        fill="none"
        fillRule="evenodd"
      >
        <path
          d="M24 0H0v24h24z"
        />
        <path
          d="M18 9.5a8.5 8.5 0 1 0-17 0 8.5 8.5 0 0 0 17 0zm-1.438 6.355l7.292 7.291a.5.5 0 0 1-.708.708l-7.291-7.292a9.5 9.5 0 1 1 .707-.707z"
          fill="currentColor"
          fillRule="nonzero"
        />
      </g>
    </svg>
  </button>
  <input
    aria-label="Search input"
    autoComplete="off"
    className="c3"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="Search Demo"
    type="text"
    value=""
  />
  <div
    aria-label="Clear button"
    className="c4"
    onClick={[Function]}
    value=""
  >
    <button
      className="c5"
    >
      x
    </button>
  </div>
  <button
    aria-label="Cancel button"
    className="c6"
    onClick={[Function]}
  >
    Cancel
  </button>
</div>
`;

exports[`SearchInput large should match snapshot 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 44px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  border: none;
  border-radius: 2px;
  background-color: rgba(255,255,255,0.5);
}

.c0.hidden {
  visibility: hidden;
}

.c0.hidden > * {
  visibility: hidden;
}

.c1 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: rgba(255,255,255,1);
  padding: 0;
  border: none;
  background: transparent;
  outline: none;
}

.hidden .c1 {
  visibility: visible;
}

.c3 {
  font-size: 16px;
  height: 100%;
  color: rgba(255,255,255,1);
  padding: 0;
  border: none;
  background: none;
}

.c3::-webkit-input-placeholder {
  color: rgba(255,255,255,1);
}

.c3::-moz-placeholder {
  color: rgba(255,255,255,1);
}

.c3:-ms-input-placeholder {
  color: rgba(255,255,255,1);
}

.c3::placeholder {
  color: rgba(255,255,255,1);
}

.c3:focus {
  outline: none;
}

.c2 {
  margin: 0 16px;
}

.c5 {
  background: transparent;
  outline: none;
  border: 1px solid rgba(255,255,255,1);
  color: rgba(255,255,255,1);
  padding: 0;
  border-radius: 14px;
  width: 14px;
  height: 14px;
  line-height: 14px;
  font-size: 14px;
  text-align: center;
  text-transform: uppercase;
}

.c6 {
  border: none;
  background: transparent;
  outline: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: 8px;
  color: rgba(255,255,255,1);
  padding: 0 16px 0 0;
  height: 100%;
}

.c4 {
  height: 100%;
  width: 44px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: default;
  visibility: hidden;
}

@media screen and (min-width:768px) {
  .c5 {
    margin-left: 8px;
  }
}

@media screen and (min-width:768px) {
  .c6 {
    display: none;
  }
}

@media screen and (min-width:768px) {
  .c4 {
    width: 40px;
    -webkit-box-pack: left;
    -webkit-justify-content: left;
    -ms-flex-pack: left;
    justify-content: left;
  }
}

<div
  className="c0"
  onBlur={[Function]}
  onFocus={[Function]}
>
  <button
    aria-label="Search button"
    className="c1"
    onClick={[Function]}
  >
    <svg
      className="c2"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        fill="none"
        fillRule="evenodd"
      >
        <path
          d="M24 0H0v24h24z"
        />
        <path
          d="M18 9.5a8.5 8.5 0 1 0-17 0 8.5 8.5 0 0 0 17 0zm-1.438 6.355l7.292 7.291a.5.5 0 0 1-.708.708l-7.291-7.292a9.5 9.5 0 1 1 .707-.707z"
          fill="currentColor"
          fillRule="nonzero"
        />
      </g>
    </svg>
  </button>
  <input
    aria-label="Search input"
    autoComplete="off"
    className="c3"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="Search Demo"
    type="text"
    value=""
  />
  <div
    aria-label="Clear button"
    className="c4"
    onClick={[Function]}
    value=""
  >
    <button
      className="c5"
    >
      x
    </button>
  </div>
  <button
    aria-label="Cancel button"
    className="c6"
    onClick={[Function]}
  >
    Cancel
  </button>
</div>
`;

exports[`SearchInput small should match snapshot 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 36px;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  border: none;
  border-radius: 2px;
  background-color: rgba(255,255,255,0.5);
}

.c0.hidden {
  visibility: hidden;
}

.c0.hidden > * {
  visibility: hidden;
}

.c1 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: rgba(255,255,255,1);
  padding: 0;
  border: none;
  background: transparent;
  outline: none;
}

.hidden .c1 {
  visibility: visible;
}

.c3 {
  font-size: 14px;
  height: 100%;
  color: rgba(255,255,255,1);
  padding: 0;
  border: none;
  background: none;
}

.c3::-webkit-input-placeholder {
  color: rgba(255,255,255,1);
}

.c3::-moz-placeholder {
  color: rgba(255,255,255,1);
}

.c3:-ms-input-placeholder {
  color: rgba(255,255,255,1);
}

.c3::placeholder {
  color: rgba(255,255,255,1);
}

.c3:focus {
  outline: none;
}

.c2 {
  margin: 0 16px;
}

.c5 {
  background: transparent;
  outline: none;
  border: 1px solid rgba(255,255,255,1);
  color: rgba(255,255,255,1);
  padding: 0;
  border-radius: 14px;
  width: 14px;
  height: 14px;
  line-height: 14px;
  font-size: 14px;
  text-align: center;
  text-transform: uppercase;
}

.c6 {
  border: none;
  background: transparent;
  outline: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: 8px;
  color: rgba(255,255,255,1);
  padding: 0 16px 0 0;
  height: 100%;
}

.c4 {
  height: 100%;
  width: 44px;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: default;
  visibility: visible;
}

@media screen and (min-width:768px) {
  .c5 {
    margin-left: 8px;
  }
}

@media screen and (min-width:768px) {
  .c6 {
    display: none;
  }
}

@media screen and (min-width:768px) {
  .c4 {
    width: 40px;
    -webkit-box-pack: left;
    -webkit-justify-content: left;
    -ms-flex-pack: left;
    justify-content: left;
  }
}

<div
  className="c0"
  onBlur={[Function]}
  onFocus={[Function]}
>
  <button
    aria-label="Search button"
    className="c1"
    onClick={[Function]}
  >
    <svg
      className="c2"
      height="16"
      viewBox="0 0 16 16"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        fill="none"
        fillRule="evenodd"
      >
        <path
          d="M16 0H0v16h16z"
        />
        <path
          d="M12 6.5a5.5 5.5 0 1 0-11 0 5.5 5.5 0 0 0 11 0zm-.564 4.229l4.418 4.417a.5.5 0 0 1-.708.708l-4.417-4.418a6.5 6.5 0 1 1 .707-.707z"
          fill="currentColor"
          fillRule="nonzero"
        />
      </g>
    </svg>
  </button>
  <input
    aria-label="Search input"
    autoComplete="off"
    className="c3"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="Search Demo"
    type="text"
    value="test"
  />
  <div
    aria-label="Clear button"
    className="c4"
    onClick={[Function]}
    value="test"
  >
    <button
      className="c5"
    >
      x
    </button>
  </div>
  <button
    aria-label="Cancel button"
    className="c6"
    onClick={[Function]}
  >
    Cancel
  </button>
</div>
`;
